# neo4j-databricks-demo

./: .env.sample  .gitignore  BACKGROUND_CONCEPTS.md  DATA_IMPORT.md  EMBED.md  GRAPH_AUGMENTATION.md  IMPORT.md  IMPORT_NEO4J.md  KNOWLEDGE_AGENT_DESCRIPTION.md  OpenAI LLM Agent Inquiry.ipynb  README.md  SCHEMA_MODEL_OVERVIEW.md  SETUP.md  UPLOAD.md  VECTOR.md  create_archive.sh  data_extraction.ipynb  databricks.yml  databricks_constants.py  gitpush.sh  mlflow.db  neo4j_importer_model_financial_demo.json  neo4j_schemas.py  pyproject.toml  test_file.txt
.github/: copilot-instructions.md
.github/instructions/: documentation.md  jupyter-notebooks.md  python-modules.md
archive/: data_extraction.ipynb
data/csv/: accounts.csv  banks.csv  companies.csv  customers.csv  portfolio_holdings.csv  stocks.csv  transactions.csv
data/html/: bank_branch_pacific_coast_downtown.html  bank_profile_first_national_trust.html  company_quarterly_report_global_finance.html  customer_profile_robert_chen.html  fintech_disruption_banking_industry.html  regulatory_compliance_banking_2023.html  retail_investment_disruption_banking_industry.html
data/profiles/: company_analysis_techcore_solutions.txt  customer_profile_james_anderson.txt  customer_profile_maria_rodriguez.txt  investment_strategy_guide_moderate_risk.txt  market_analysis_technology_sector.txt  real_estate_investment_guide.txt  renewable_energy_investment_trends.txt  retirement_planning_strategies.txt
docs/: BACKGROUND_CONCEPTS.md  GRAPH_AUGMENTATION.md  SCHEMA_MODEL_OVERVIEW.md
docs/export/: export-slides.sh
lab_1_databricks_upload/: README.md  clear_neo4j_database.py  upload_to_databricks.py
lab_2_neo4j_import/: README.md  import_financial_data_to_neo4j.ipynb  query_financial_graph.py  query_samples.ipynb
lab_3_neo4j_to_lakehouse/: README.md  export_neo4j_to_databricks.ipynb  export_neo4j_to_databricks.py
lab_3_vector_embeddings/: README.md  __init__.py  debug_graph.py  document_processor.py  embedding_provider.py  graph_writer.py  schemas.py  search.py  vector_embeddings.ipynb  vector_embeddings.py
lab_4_ai_agents/: README.md
lab_4_neo4j_to_lakehouse/: README.md
lab_5_ai_agents/: README.md
lab_5_multi_agent/: README.md  SAMPLE_QUERIES.md
lab_6_augmentation_agent/: DSPYING.md  DSPY_README.md  LANGGRAPH_DATABRICKS_STRUCTURED.md  PROPOSAL_structured_output_neo4j_writeback.md  README.md  WHY_NOT_LANGGRAPH.md  agent_dspy.py  augmentation_agent.ipynb  augmentation_agent.py  augmentation_agent_notebook.ipynb  augmentation_dspy_agent.ipynb  schemas.py  utils.py
lab_6_multi_agent/: README.md
lab_7_augmentation_agent/: DSPY_README.md  README.md  agent_dspy.py  augmentation_dspy_agent.ipynb  utils.py
scripts/: setup_databricks_secrets.sh  upload_csv_to_volume.sh
slides/: 00-background-slides.md  01-lab1-databricks-upload-slides.md  02-lab2-neo4j-import-slides.md  03-lab3-export-to-lakehouse-slides.md  03-lab3-neo4j-graphrag-slides.md  04-lab4-ai-agents-slides.md  04-lab4-export-to-lakehouse-slides.md  05-lab5-ai-agents-slides.md  05-lab5-multi-agent-slides.md  06-lab6-augmentation-agent-slides.md  06-lab6-multi-agent-slides.md  07-lab7-augmentation-agent-slides.md  NEW_TOPICS.md  README.md  gds-overview-slides.md
src/: import_financial_data_to_neo4j.ipynb  nyc_taxi_demo.py  upload_to_databricks.py
(+37 files in other folders)
